--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="text-center">
                 <!-- <div class="author-img" style="background-image: url(images/mypic.jpg);"></div> -->
 				 <div class="author-img">
-                    <img src="images/mypic.jpg" alt="author" height="150px" width="150px" style="border: 3px solid black;">
+                    <img src="images/mypic.jpeg" alt="author" height="150px" width="150px" style="border: 3px solid black;">
                 </div> 
 				<h1 id="colorlib-logo"><a href="https://www.linkedin.com/in/sai-pavan-a70072213">Sai Pavan</a></h1>
 				<p><strong>Associate Software Engineer, at<br>
