--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <div class="about-desc">
                             <h2>About Me</h2>
                             <hr>
-                            <p>Hello people! <br>I am Sai Pavan Rajulapati, currently working as Software Engineer 1 at Dell Technologies, Hyderabad. 
-                                I also did a 10 months Internship at Global Foundries, Bangalore.While I'm a proficient full-stack developer, my expertise is in building scalable backend services, frontend development and data integration.
+                            <p>Hello people! <br>I am Sai Pavan Rajulapati, currently working as Associate Software Engineer at Tech Mahindra, Hyderabad. 
+                                I also did a 1 month Internship at Inoogeekes technologies, Vijayawada.While I'm a proficient full-stack developer, my expertise is in building scalable backend services, frontend development and data integration.
                                 Apart from development, I have a good interest in Data Structures and Algorithms.
                                 <br>I like building new stuff and work with other people.</p>
                         </div>
