made some changes in about section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                                 Apart from development, I have a good interest in Data Structures and Algorithms.
                                 <br>I like building new stuff and work with other people.</p>
                         </div>
+                        <div class="cartoon">
+                            <img src="images/cartoon.jpg">
+                        </div>
      
             </section>
     </body>
